tests/NormalTests/paczka2/big_fuzzy/40086957.err
Error in line 4: NYszPNVhnl A252 25,72
Error in line 6: A258 A739 66,4
Error in line 12: s8yFM1hsOsS A258 0,3
Error in line 22: HII6hrpAX A258 -2,2
Error in line 27: A258 A739 68,0
Error in line 30: P3QC A258 36,5
Error in line 18: HII6hrpAX A258 36,2
Error in line 28: 6SeDw2 A252 40,1
Error in line 35: NYszPNVhnl A252 55,4
Error in line 64: nUPO A2[2 20,9
Error in line 75: A258 A252 75,3
Error in line 90: nUPO A739 56,6
Error in line 95: s8yFM1hsOsS A258 39,8
Error in line 92: nUPO A252 28,8
Error in line 115: 6SeDw2 S612 46,3
Error in line 141: 6SeDw2 S612 29,0
Error in line 147: 6SeDw2 A258 41,9
Error in line 157: nUPO A739 35,7
Error in line 164: nUPO S612 35,5
Error in line 162: HII6hrpAX A252 135,8
Error in line 174: NYszPNVhnl A258 0,5
Error in line 182: HII6hrpAX A258 27,5
Error in line 138: P3QC A739 60,5
Error in line 179: nUPO A252 66,8
Error in line 201: nUPO S612 86,0
Error in line 203: nUPO A252 56,1
Error in line 208: HII6hrpAX A252 -1,3
Error in line 197: HII6hrpAX A252 24,3
Error in line 215: nUPO A258 33,46
Error in line 207: s8yFM1hsOsS S612 40,5
Error in line 229: HII6hrpAX A252 65,52
Error in line 236: A258 A739 41,2
Error in line 238: A258 S612 57,6
Error in line 244: A258 A258 13,4
